--- a/index.bundle.css
+++ b/index.bundle.css
@@ -870,6 +870,34 @@ input[aria-pressed="true"],
   margin-right: 4px;
   cursor: pointer; }
 
+.carousel1-02 {
+  background-color: #2a2a2d;
+  color: #fff; }
+  .carousel1-02 button {
+    background-color: #bab9b9;
+    border: 1px solid #000; }
+    .carousel1-02 button svg {
+      fill: #fff; }
+    .carousel1-02 button:hover {
+      background-color: #fff; }
+    .carousel1-02 button:hover svg {
+      fill: #be0101; }
+
+.carousel1-02_content {
+  background-color: #1c1d22; }
+
+.carousel1_02_pagebuttons {
+  color: #fff;
+  background-color: #343437;
+  border: 1px solid #fff; }
+  .carousel1_02_pagebuttons:hover {
+    background-color: #fff;
+    color: #be0101; }
+
+.carousel1_02_pagebuttons--active {
+  background-color: #be0101;
+  border: 1px solid #000; }
+
 .carousel1-02 button {
   border: 1px solid #000;
   cursor: pointer; }
@@ -878,8 +906,7 @@ input[aria-pressed="true"],
   .carousel1-02 button svg {
     vertical-align: middle;
     width: 24px;
-    height: 24px;
-    fill: #fff; }
+    height: 24px; }
 
 .carousel1_02_previous {
   padding: 4px 4px 4px 0;
@@ -889,19 +916,19 @@ input[aria-pressed="true"],
   padding: 4px 0 4px 4px;
   /* trbl */ }
 
+.carousel1-02_pagination {
+  padding: 6px 0 6px 0;
+  /* trbl */ }
+
 .carousel1-02_content {
   height: 50px; }
 
 .carousel1_02_pagebuttons {
   width: 12px;
   height: 12px;
-  background-color: #ccc;
   border-radius: 50%;
   margin-right: 4px;
   cursor: pointer; }
-
-.carousel1_02_pagebuttons--active {
-  background-color: #000; }
 
 .carousel1-03 button {
   border: 1px solid #000;
