--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,58 +1,18 @@
 // base button styles
 // ==================================================/
-%btn--transparent {
-  background-color: transparent;
-}
-
-%btn_font--sans-serif {
-  font-family: sans-serif;
-}
-
 button,
 input [type="button"],
 [type="reset"],
-[type="submit"] {
+[type="submit"],
+.btn {
   // see vendor/normalize.scss for other properties
   @extend %mp--0;
-  @extend %btn_font--sans-serif;
-}
-
-button[aria-pressed="true"],
-input[aria-pressed="true"],
-[role="button"][aria-pressed="true"] {
-    background-color: #999;
-    border: 1px solid #000;
-}
-
-.btn {
-  @extend %display--inline-block;
-  @extend %mp--0;
-  @extend %btn_font--sans-serif;
-  font-size: 100%; 
-  line-height: 1.15;  
-}
-
-// sizes
-// ==================================================/
-%btn--sm {
-
-}
-
-%btn--md {
-
-}
-
-%btn--lg {
-
 }
 
 // themes
 // ==================================================/
-%btn1-01_theme {
+.btn1-01 {
+  @extend %display--inline-block;
   @extend %padd--4;
   border: 1px solid #000;
-}
-
-.btn1-01 {
-  @extend %btn1-01_theme;
 }
