--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,10 +6,13 @@
 @import "utils/helpers";
 @import "base/reset";
 @import "vendor/normalize"; 
+
 @import "base/fonts";
+@import "base/colors";
 
 @import "vendor/mq"; 
-@import "layout/grid";
+@import "vendor/bootstrap4/bootstrap-grid";
+@import "utils/bootstrap4-mods";
 
 @import "components/buttons";
 
@@ -17,8 +20,21 @@
 
 // show the active breakpoint (_mq.scss)
 // ==================================================/
-@include mq-show-breakpoints;
+// @include mq-show-breakpoints;
 
 // show col-* grid borders (_grid.scss)
 // ==================================================/
-@include col-grid-border(#000);
+[class|="col"] {
+  border: 1px solid #000;
+}
+
+html {
+  font-size: $font-size-default + px;
+}
+
+// temp
+
+body {
+  font-family: arial, helvetica, sans-serif;
+  font-size: rem(16);
+}
